objects/Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Original_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Stores original subscription which is been amended 
Downstream Impact? Effects reporting and billing integration 
Which department is owner? IT/PureCloud Team</description>
        <inlineHelpText>Original CCDB/Subscription created that has since been amended or renewed.</inlineHelpText>
        <label>Original Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>CCDBs/Subscriptions (Original Subscription)</relationshipLabel>
        <relationshipName>ChildSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Genesys_Care_Support_Offer__c</fullName>
        <description>What it does? Store Other Genesys Care/Support Offer. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Other Genesys Care/Support Offer</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Genesys_Care_Support_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it does? Store Other Genesys Care/Support Value . Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Other Genesys Care/Support Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overage_Allowance_Other__c</fullName>
        <description>What it Does? Stores whether &apos;Other&apos; value for burst allowance.
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Burst Allowance Other %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Overage_Allowance_Price_Uptick__c</fullName>
        <description>What it Does? Stores the value for burst allowance price uptick.
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Burst Allowance Price Uptick</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCC_Migration_Subscription_Unique_ID__c</fullName>
        <description>Used to identify subscriptions created during PCC CCDB Migration.To be deleted after PCC CCDB system has been stabilised.</description>
        <label>PCC Migration Subscription Unique ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_SFDC_ID__c</fullName>
        <description>What it Does? Stores Sold To ID
Downstream Impact? Effects cloud deployment 
Which department is owner? IT/PureCloud Team</description>
        <formula>Business_Partner__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner SFDC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <description>What it Does? Stores payment term of the subscription 
Downstream Impact? Effects DQ and reporting
Which department is owner? IT/PureCloud Team</description>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Net 30</fullName>
                    <default>true</default>
                    <label>Net 30</label>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms_Price_Uptick__c</fullName>
        <description>What it Does? Stores payment term price uptick.
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Payment Terms Price Uptick</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Platform_Type__c</fullName>
        <formula>IF(NOT(ISBLANK(Opportunity_LookUp__c)), Text(Opportunity_LookUp__r.Primary_Line_of_Business__c), TEXT(Quote__r.Quote_Business_Type__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platform Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book_Currency__c</fullName>
        <description>What it Does? Stores price book field based on currency
Downstream Impact? Effects reporting
Which department is owner? IT/PureCloud Team</description>
        <label>Price Book (Currency)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Method__c</fullName>
        <description>What it does? Stores the Pricing Method. Downstream Impact?Reporting. Which Department is Owner? Finance</description>
        <inlineHelpText>Method in which we track and bill usage.</inlineHelpText>
        <label>Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Concurrent</fullName>
                </value>
                <value>
                    <fullName>Enabled</fullName>
                </value>
                <value>
                    <fullName>Named</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Count__c</fullName>
        <label>Product Count (To Be Deleted)</label>
        <summaryForeignKey>Subscription_Product__c.Subscription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Tier__c</fullName>
        <description>What it does? Stores the Product Tier. 
Downstream Impact?CCDB / PCC Subscriptions. 
Which Department is Owner? IT</description>
        <label>Product Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>RCM Internet Option</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PureSuccess_Dollar_Amount__c</fullName>
        <description>What it does? Stores the PureSuccess Dollar Amount . Downstream Impact?Reporting. Which Department is Owner? Finance</description>
        <label>PureSuccess Dollar Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PureSuccess_End_Date__c</fullName>
        <description>What it does? Store PureSuccess End Date. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>PureSuccess End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PureSuccess_Offer__c</fullName>
        <description>What it does?Store PureSuccess Offer. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>PureSuccess Offer</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PureSuccess_Start_Date__c</fullName>
        <description>What it does? Store PureSuccess Start Date. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>PureSuccess Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PureSuccess_Type__c</fullName>
        <description>What it Does? Stores puresuccess type.
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>PureSuccess Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equip</fullName>
                </value>
                <value>
                    <fullName>Guide</fullName>
                </value>
                <value>
                    <fullName>Drive</fullName>
                </value>
                <value>
                    <fullName>Partner PureSuccess</fullName>
                </value>
                <value>
                    <fullName>PureSuccess</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Amend_Date__c</fullName>
        <formula>if ( Quote__r.Order_Type__c = &apos;Amend Subscription&apos;, Quote__r.Subscription_Amend_Date__c , Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Amend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Order_Type__c</fullName>
        <formula>Quote__r.Order_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Lookup to quote object which is approved
Downstream Impact? Effects reporting and quote amendment
Which department is owner? IT/PureCloud Team</description>
        <label>Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ramp_End_Date__c</fullName>
        <description>What it Does? Stores Ramp End date
Downstream Impact? Effects cloud deployment 
Which department is owner? IT/PureCloud Team</description>
        <label>Ramp End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ramp_Period__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? Stores ramp period for this subscription
Downstream Impact? Effects reporting and billing
Which department is owner? IT/PureCloud Team</description>
        <label>Ramp Period (Months)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_New_when_Sub_s_Already_Exist__c</fullName>
        <description>What it Does? Captures why a new subscription has to be created when there are existing subs for that platform 
Downstream Impact? Effects sales and reporting 
Which department is owner? Sales Ops</description>
        <label>Reason for New when Sub(s) Already Exist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Reason_for_New_when_Sub_s_Already_Exist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Master_Order__r.Region__c</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Subscription_Term__c</fullName>
        <description>What it Does? Stores how the subscription will be renewed
Downstream Impact? Effects reporting and billing
Which department is owner? IT/PureCloud Team</description>
        <label>Renewal Subscription Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic Annual</fullName>
                </value>
                <value>
                    <fullName>Automatic Monthly</fullName>
                </value>
                <value>
                    <fullName>Automatic Initial Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requires_Manual_Billing_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Manual Billing Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Right_To_Burst__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does? Stores whether quote has right to burst.
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Right To Burst</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Right_To_Remix__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does? Stores whether quote has right to remix.
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Right To Remix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sale_Type__c</fullName>
        <description>What it Does? Identifies if the subscription is based on partner or not
Downstream Impact? Effects reporting
Which department is owner? IT/PureCloud Team</description>
        <label>Sale Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                    <default>true</default>
                    <label>Direct</label>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_Ramp_Extension_Reason__c</fullName>
        <label>Ramp Extension Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Network Issues</fullName>
                </value>
                <value>
                    <fullName>Customer Delays</fullName>
                </value>
                <value>
                    <fullName>Feature Issue</fullName>
                </value>
                <value>
                    <fullName>Partner Issue</fullName>
                </value>
                <value>
                    <fullName>Edge Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Setup_Provisioning_Charges__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? Stores total Setup Provisioning Charges
Downstream Impact? PCC CPQ
Which department is owner? IT</description>
        <label>Setup Provisioning Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sold_To_GARN__c</fullName>
        <description>What it does? Stores the Sold To GARN. Downstream Impact?Reporting. Which Department is Owner? Finance</description>
        <formula>Business_Partner__r.SAP_Account_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To GARN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Country__c</fullName>
        <description>What it Does? CCDB - Displays Quote&apos;s Opp&apos;s Sold To Country Name 
Downstream Impact? CCDB 
Which department is owner? IT/CSM</description>
        <formula>IF(NOT(ISBLANK(Quote__c)), Quote__r.BigMachines__Opportunity__r.Sold_To_Country__r.Country__c, Opportunity_LookUp__r.Sold_To_Country__r.Country__c)</formula>
        <label>Sold to Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Offer_Terms__c</fullName>
        <label>Special Offer Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>What it Does? Stores start date to start billing
Downstream Impact? Effects reporting and billing
Which department is owner? IT/PureCloud Team</description>
        <inlineHelpText>Date in which the order was approved and the CCDB/Subscription record was created, or the start date of the renewal term.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>What it Does? Captures the current status of this subscription
Downstream Impact? Effects reporting and integration with billing
Which department is owner? IT/PureCloud Team</description>
        <inlineHelpText>Current state of this CCDB/Subscription record.  NOTE: Only active CCDB/Subscription records can be amended or renewed.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Amended</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Pending Cancellation</fullName>
                </value>
                <value>
                    <fullName>Pending Product Deactivation</fullName>
                </value>
                <value>
                    <fullName>Do Not Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_AppFoundry_Trial_Products__c</fullName>
        <label>Status of Trial Products</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Trial Products Added</fullName>
                </value>
                <value>
                    <fullName>Trial Products Added and Active</fullName>
                </value>
                <value>
                    <fullName>Trial Products Deactivated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Addendum_Link__c</fullName>
        <description>What it Does? Stores custom or standard subscription Addendum Link. 
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Subscription Addendum Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Subscription_Addendum_Type__c</fullName>
        <description>What it Does? Stores type of Subscription Addendum Link 
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Subscription Addendum Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <description>What it Does? Stores term end date for this subscription
Downstream Impact? Effects reporting and billing
Which department is owner? IT/PureCloud Team</description>
        <inlineHelpText>Date in which the initial term or renewal term ends.</inlineHelpText>
        <label>Subscription Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <description>What it Does? Stores term start date for this subscription
Downstream Impact? Effects reporting and billing
Which department is owner? IT/PureCloud Team</description>
        <inlineHelpText>Date in which the initial term or renewal term begins, which is the start date plus the ramp period, if applicable.</inlineHelpText>
        <label>Subscription Term Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sync_Status__c</fullName>
        <description>What it Does? Stores responses from PureCloud
Downstream Impact? Effects integration with billing
Which department is owner? IT/PureCloud Team</description>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting to Sync</fullName>
                    <default>true</default>
                    <label>Waiting to Sync</label>
                </value>
                <value>
                    <fullName>Sent to PureCloud</fullName>
                </value>
                <value>
                    <fullName>Failed to Send</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAM_Duration_Months__c</fullName>
        <description>What it does? CCDB / renewal opportunity 
Downstream Impact? Renewal opportunity. 
Which Department is Owner? IT</description>
        <inlineHelpText>Longest duration of any individual Technical Account Manager (TAM) services purchased by customer.</inlineHelpText>
        <label>TAM Duration (Months)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAM_Services_Amount__c</fullName>
        <description>What it does? CCDB / renewal opportunity 
Downstream Impact? Renewal opportunity. 
Which Department is Owner? IT</description>
        <inlineHelpText>Total amount of Technical Account Manager (TAM) services purchased by customer.</inlineHelpText>
        <label>TAM Services Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? Stores total contract value
Downstream Impact? Effects reporting
Which department is owner? IT/PureCloud Team</description>
        <inlineHelpText>Total Contract Value.</inlineHelpText>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telco_CMRR__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? PCC CPQ Store Telco CMRR 
Downstream Impact? PCC CPQ 
Which department is owner? IT</description>
        <label>Telco CMRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term_Length_Months__c</fullName>
        <description>What it Does? Stores Term length 
Downstream Impact? Effects cloud deployment 
Which department is owner? IT/PureCloud Team</description>
        <label>Term Length (Months)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>What it Does? Stores the period of the subscription 
Downstream Impact? Effects DQ and reporting
Which department is owner? IT/PureCloud Team</description>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                    <default>true</default>
                    <label>1 Year</label>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
                <value>
                    <fullName>6 Years</fullName>
                </value>
                <value>
                    <fullName>7 Years</fullName>
                </value>
                <value>
                    <fullName>8 Years</fullName>
                </value>
                <value>
                    <fullName>9 Years</fullName>
                </value>
                <value>
                    <fullName>10 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terms_of_Condition__c</fullName>
        <description>What it does? Used to store Terms of Conditions related to Trial. Downstream Impact? None. Which Department is Owner? I</description>
        <label>Terms of Condition</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Top_Play__c</fullName>
        <description>What it does? Field to store Play of related Quote. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Top Play</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_3rd_Party__c</fullName>
        <label>Total 3rd Party</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discount_Genesys_and_Third_Party__c</fullName>
        <description>What it Does? CCDB - Stores Quote&apos;s Discount changes 
Downstream Impact? CCDB 
Which department is owner? IT/CSM</description>
        <label>Total Discount (Genesys and Third-Party)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Education__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? Stores total education amount
Downstream Impact? Effects reporting
Which department is owner? IT/PureCloud Team</description>
        <label>Total Education</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_GU_Training_Units__c</fullName>
        <description>What it Does? store GU training units value 
Downstream Impact? PCC CPQ 
Which department is owner? IT</description>
        <label>Total GU Training Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hardware__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? Stores total hardware amount
Downstream Impact? Effects reporting
Which department is owner? IT/PureCloud Team</description>
        <label>Total Hardware</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Non_Recurring_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? Stores total non recurring amount
Downstream Impact? Effects reporting
Which department is owner? IT/PureCloud Team</description>
        <label>Total Non Recurring Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Services__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? Stores total services amount
Downstream Impact? Effects reporting
Which department is owner? IT/PureCloud Team</description>
        <label>Total Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tokens__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? PCC CPQ total PureSuccess tokens 
Downstream Impact? PCC CPQ 
Which department is owner? IT</description>
        <label>Total Tokens</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trevor_s_Validation_Notes__c</fullName>
        <label>Trevor&apos;s Validation Notes</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_Data_Submission_Method__c</fullName>
        <description>What it Does? Indicates Usage data files submission by customer. &quot;Automated&quot; – raw usage files will be submitted via automated process. &quot;Manual&quot; - raw usage files will be submitted via manual process. “No Bursting” - No charge for bursting usage.</description>
        <label>Usage Data Submission Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automated</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>No Bursting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <defaultValue>1</defaultValue>
        <description>What it Does? Stores current version of this subscription
Downstream Impact? Effects reporting and quote amendment
Which department is owner? IT/PureCloud Team</description>
        <label>Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora_Id__c</fullName>
        <description>What it Does? Stores original zuora subscription id 
Downstream Impact? Effects data migration
Which department is owner? IT Team</description>
        <label>Zuora Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CCDB/Subscription</label>
    <listViews>
        <fullName>Active_PC</fullName>
        <columns>NAME</columns>
        <columns>Master_Order__c</columns>
        <columns>Order__c</columns>
        <columns>Org_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Offering_Type__c</field>
            <operation>equals</operation>
            <value>PureCloud</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active PC</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Active_Subscriptions1</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Business_Partner__c</columns>
        <columns>Bill_To__c</columns>
        <columns>Sale_Type__c</columns>
        <columns>Offering_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Billing_Category__c</columns>
        <columns>Billing_Period__c</columns>
        <columns>Subscription_Start_Date__c</columns>
        <columns>Subscription_End_Date__c</columns>
        <columns>TCV__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Offering_Type__c</field>
            <operation>equals</operation>
            <value>PureConnect Cloud,PureCloud,PureEngage Cloud</value>
        </filters>
        <filters>
            <field>Subscription_End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>All Active Subscriptions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Subscriptions</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>MSA_Link_Type__c</columns>
        <columns>Master_Order__c</columns>
        <columns>NAME</columns>
        <columns>Business_Partner__c</columns>
        <columns>Bill_To__c</columns>
        <columns>Sale_Type__c</columns>
        <columns>Offering_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Billing_Category__c</columns>
        <columns>Billing_Period__c</columns>
        <columns>Subscription_Start_Date__c</columns>
        <columns>Subscription_End_Date__c</columns>
        <columns>TCV__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Offering_Type__c</field>
            <operation>equals</operation>
            <value>PureConnect Subscription</value>
        </filters>
        <label>All Active Subscriptions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Auto_Renewed_All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Billing_Category__c</columns>
        <columns>Status__c</columns>
        <columns>Sync_Status__c</columns>
        <columns>Subscription_Start_Date__c</columns>
        <columns>Subscription_End_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Version__c</columns>
        <columns>Zuora_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Auto_Renewed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Auto Renewed (All)</label>
        <language>en_US</language>
    </listViews>
</CustomObject>